--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -102,7 +102,7 @@ services:
   #frontends
   landing-page:
     container_name: landing-page
-    image: ghcr.io/gamify-it/landing-page:main
+    image: ghcr.io/gamify-it/landing-page:v1.6.0
     restart: always
     pull_policy: always
     expose:
@@ -110,7 +110,15 @@ services:
 
   overworld:
     container_name: overworld
-    image: ghcr.io/gamify-it/overworld:main
+    image: ghcr.io/gamify-it/overworld:v1.5.0
+    restart: always
+    pull_policy: always
+    expose:
+      - "80"
+      
+  regexgame:
+    container_name: regexgame
+    image: ghcr.io/gamify-it/regexgame:development
     restart: always
     pull_policy: always
     expose:
