--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -102,7 +102,7 @@ services:
   #frontends
   landing-page:
     container_name: landing-page
-    image: ghcr.io/gamify-it/landing-page:main
+    image: ghcr.io/gamify-it/landing-page:v1.6.0
     restart: always
     pull_policy: always
     expose:
@@ -110,7 +110,7 @@ services:
 
   overworld:
     container_name: overworld
-    image: ghcr.io/gamify-it/overworld:main
+    image: ghcr.io/gamify-it/overworld:v1.5.0
     restart: always
     pull_policy: always
     expose:
@@ -118,8 +118,9 @@ services:
 
   regexgame:
     container_name: regexgame
-    build: .
+    image: ghcr.io/gamify-it/regexgame:main
     restart: always
+    pull_policy: always
     expose:
       - "80"
 
