Reverted/Modified changes
Reverted changes, but kept version changes
Also extended readme

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -12,7 +12,7 @@ services:
       POSTGRES_SETUP: >
         keycloak/default.sql
         overworld/default.sql
-  #      regexgame/default.sql
+        regexgame/default.sql
 
   keycloak-db:
     container_name: keycloak-db
@@ -116,14 +116,6 @@ services:
     expose:
       - "80"
       
-  regexgame:
-    container_name: regexgame
-    image: ghcr.io/gamify-it/regexgame:development
-    restart: always
-    pull_policy: always
-    expose:
-      - "80"
-
   lecturer-interface:
     container_name: lecturer-interface
     image: ghcr.io/gamify-it/lecturer-interface:main
