--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -12,7 +12,7 @@ services:
       POSTGRES_SETUP: >
         keycloak/default.sql
         overworld/default.sql
-  #      regexgame/default.sql
+        regexgame/default.sql
 
   keycloak-db:
     container_name: keycloak-db
@@ -102,7 +102,7 @@ services:
   #frontends
   landing-page:
     container_name: landing-page
-    image: ghcr.io/gamify-it/landing-page:main
+    image: ghcr.io/gamify-it/landing-page:v1.6.0
     restart: always
     pull_policy: always
     expose:
@@ -110,12 +110,12 @@ services:
 
   overworld:
     container_name: overworld
-    image: ghcr.io/gamify-it/overworld:main
+    image: ghcr.io/gamify-it/overworld:v1.5.0
     restart: always
     pull_policy: always
     expose:
       - "80"
-
+      
   lecturer-interface:
     container_name: lecturer-interface
     image: ghcr.io/gamify-it/lecturer-interface:main
